# otus-cpp-pro-ls002

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: CMakeLists.txt  main.cpp
tests/: gtests_version.cpp
